fixed buttons on mobile view

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -91,43 +91,46 @@ body, html {
 }
 
 #profile {
-   position: fixed;
-       margin-right: 35%;
-       margin-top: 2%;
-   height: 76px;
-   width:  86px;
-   padding: 25px 0px;
+    background: #11998e;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #38ef7d, #11998e);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #38ef7d, #11998e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    position: absolute;
+    top: 55px;
+    left: 10px;
+    z-index: 5;
+    height: 80px;
+    width:  80px;
+    padding: 25px 0px;
+    border-radius: 20px;
 }
 
 #uber {
-    position: fixed;
-        margin-right: 35%;
-        margin-top: 12%;
-    background-color: #000000;
-    height: 76px;
-    width:  86px;
-    padding: 25px 0px;
+    position: absolute;
+    top: 145px;
+    left: 10px;
+    z-index: 5;
+    padding: 0px;
 }
 
 #lyft {
-    position: fixed;
-         margin-right: 35%;
-         margin-top: 22%;
-    color: #ff00b6;
-    height: 76px;
-    width:  86px;
-    padding: 25px 0px;
+    position: absolute;
+    top: 235px;
+    left: 10px;
+    z-index: 5;
+    padding: 0px;
 }
 
 #moovit2 {
-    position:fixed;
-          margin-right: 35%;
-          margin-top: 32%;
+    position: absolute;
+    top: 325px;
+    left: 10px;
+    z-index: 5;
     background-color: #000000;
     color:  #f5532f;
-    height: 76px;
-    width:  86px;
+    height: 80px;
+    width:  80px;
     padding: 25px 0px;
+    border-radius: 20px;
 }
 
 .moovit1{
@@ -237,8 +240,9 @@ body, html {
     padding: 0 11px 0 13px;
     text-overflow: ellipsis;
     width: 280px;
-    margin-top: 18px;
-    margin-left: 5px;
+    height: 30px;
+    margin-top: 15px;
+    margin-left: 10px;
     border: solid 2px #00b07b;
 
 }
@@ -281,6 +285,7 @@ body, html {
     line-height: 30px;
     padding-left: 10px;
 }
+
 
 #safe {
     position: absolute;
